--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "recharts": "^3.0.2",
+    "use-sound": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
